--- a/.github/workflows/pushToPages.yml
+++ b/.github/workflows/pushToPages.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         persist-credentials: false
     - name: Add Git safe directory
-      run: git config --global --add safe.directory /__w/corona-docs-test/corona-docs-test
+      run: git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
     - name: Checkout Submodules
       run: |
         git submodule sync --recursive
